# zero2prod

./: Cargo.toml  Dockerfile  configuration.yaml
.github/workflows/: general.yaml
migrations/: 20240324003342_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configurations.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
