[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
claims = "0.7.1"
config = "0.14.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.10"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
] }
unicode-segmentation = "1.11.0"
url = "2.5.0"
uuid = { version = "1", features = ["v4"] }
validator = "0.18.1"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dependencies.reqwest]
version = "0.12.3"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
fake = "2.9.2"
once_cell = "1.19.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde_json = "1.0.117"
wiremock = "0.6.0"
